--- a/example/package.json
+++ b/example/package.json
@@ -6,12 +6,11 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.1",
-    "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
-    "react-seat-picker": "^1.0.4"
+    "react-seat-picker": "link:.."
   },
   "scripts": {
     "start": "react-scripts start",
