--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.2.0",
+    "react-tooltip": "^3.11.1",
     "react-seat-picker": "link:.."
   },
   "browserslist": [
