--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,8 @@
     "space-before-function-paren": 0,
 
     // allow specifying true explicitly for boolean props
-    "react/jsx-boolean-value": 0
+    "react/jsx-boolean-value": 0,
+    
+    "max-len": [2, {"code":120,"ignoreComments":true}]
   }
 }
