ci: adding commitlint/config-conventional

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "react-seat-picker",
   "version": "1.5.2",
   "description": "A React component to select seats.",
-  "author": "Rogger794",
+  "author": {
+    "name": "Rogger794",
+    "email": "rogger.valverde@uni.pe"
+  },
   "license": "MIT",
   "repository": "Rogger794/react-seat-picker",
   "main": "dist/index.js",
@@ -26,7 +29,7 @@
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
     "start": "npm-run-all clean build:watch",
-    "prepare": "yarn run build",
+    "prepare": "yarn build",
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
@@ -48,6 +51,8 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@svgr/rollup": "^4.3.3",
     "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.3",
@@ -68,9 +73,9 @@
     "postcss-nested": "^4.2.1",
     "postcss-simple-vars": "^5.0.2",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^3.2.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts": "^1.1.4",
     "rimraf": "^3.0.0",
     "rollup": "^1.27.5",
     "rollup-plugin-babel": "^4.3.3",
@@ -85,9 +90,15 @@
     "dist"
   ],
   "dependencies": {},
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run pretest"
+      "pre-commit": "yarn pretest",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   }
 }
