--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 {
   "plugins": ["@babel/plugin-proposal-class-properties"],
   "presets": [
-    ["@babel/preset-env", {
-      "modules": false
-    }],
+    "@babel/preset-env",
     "@babel/preset-react"
   ]
 }
