--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+    "node": ">=11",
+    "npm": ">=6"
   },
   "private": false,
   "bugs": {
@@ -21,8 +21,7 @@
   },
   "homepage": "https://github.com/Rogger794/react-seat-picker#readme",
   "scripts": {
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test": "jest /tests",
     "pretest": "./node_modules/.bin/eslint --ignore-path .gitignore . --fix",
     "lint": "eslint .",
     "clean": "rimraf dist",
@@ -67,6 +66,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.1.1",
     "husky": "^3.1.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "postcss-nested": "^4.2.1",
@@ -74,6 +74,7 @@
     "prettier": "^1.19.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.27.5",
     "rollup-plugin-babel": "^4.3.3",
