docs(github): updating github references

--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-seat-picker-example",
-  "homepage": "https://Rogger794.github.io/react-seat-picker",
+  "homepage": "https://roggervalf.github.io/react-seat-picker",
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
