--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "react-seat-picker",
   "version": "1.5.2",
   "description": "A React component to select seats.",
-  "author": "Rogger794",
+  "author": "roggervalf",
   "license": "MIT",
-  "repository": "Rogger794/react-seat-picker",
+  "repository": "roggervalf/react-seat-picker",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+    "node": ">=10",
+    "npm": ">=6"
   },
   "private": false,
   "bugs": {
-    "url": "https://github.com/Rogger794/react-seat-picker/issues"
+    "url": "https://github.com/roggervalf/react-seat-picker/issues"
   },
-  "homepage": "https://github.com/Rogger794/react-seat-picker#readme",
+  "homepage": "https://github.com/roggervalf/react-seat-picker#readme",
   "scripts": {
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
