--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,24 @@
 language: node_js
+cache:
+  directories:
+    - node_modules
 node_js:
-  - 10
+  - 11
+notifications:
+  email:
+    recipients:
+      - $GH_EMAIL
+    on_success: change
+    on_failure: always
+install:
+  - yarn
+
+script:
+  - yarn build
+  - git config --global user.name "Travis CI"
+  - git config --global user.email $GH_EMAIL
+  - commitlint-travis
+
+branches:
+  except:
+    - "/^v\\d+\\.\\d+\\.\\d+$/"
