ci(semantic-release): adding new dev dependency for automate releases

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ script:
   - git config --global user.email $GH_EMAIL
   - commitlint-travis
 
+after_success:
+  - yarn semantic-release
+
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
