--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@commitlint/travis-cli": "^8.3.5",
+    "@semantic-release/changelog": "^5.0.0",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/npm": "^7.0.3",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@svgr/rollup": "^4.3.3",
     "babel-eslint": "^10.0.3",
     "commitizen": "^4.0.3",
@@ -77,6 +82,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.1.1",
     "husky": "^3.1.0",
+    "markdownlint": "^0.18.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "postcss-nested": "^4.2.1",
@@ -93,12 +99,23 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-sass": "^1.2.2",
-    "rollup-plugin-url": "^3.0.1"
+    "rollup-plugin-url": "^3.0.1",
+    "semantic-release": "^17.0.4"
   },
   "files": [
     "dist"
   ],
   "dependencies": {},
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git"
+    ],
+    "branch": "master"
+  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
